# NEMED

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cicd.yml
CACHE/: NEM Registration and Exemption List.xls
docs/source/: README.md  _toc.yml  api_reference.md  conf.py  examples.md  index.md  method.md  quickstart.md
docs/source/_static/html_charts/: emissions_NEM.html  emissions_NSW1.html  emissions_QLD1.html  emissions_SA1.html  emissions_TAS1.html  emissions_VIC1.html  emissions_trends_chart_1.html  energy_NEM.html  energy_NSW1.html  energy_QLD1.html  energy_SA1.html  energy_TAS1.html  energy_VIC1.html  intensity_NEM.html  intensity_NSW1.html  intensity_QLD1.html  intensity_SA1.html  intensity_TAS1.html  intensity_VIC1.html  total_emissions_chart_2.html
docs/source/api/: downloader.md  nemed.md  process.md
docs/source/examples/: cdeii_benchmark.md  cdeii_parent.md  cdeii_sourcecode.ipynb  emissions_trends.ipynb  example_1.ipynb  example_2.ipynb  example_3.ipynb  gallery.ipynb  marginal_emissions.ipynb  total_emissions.ipynb
docs/source/examples/charts_ex1/: FY1920_nem_emissions.html  FY1920_nem_energy.html  FY1920_nem_intensity.html  FY1920_nsw_emissions.html  FY1920_nsw_energy.html  FY1920_nsw_intensity.html  FY1920_qld_emissions.html  FY1920_qld_energy.html  FY1920_qld_intensity.html  emissions_sa.html  (+26 more)
examples/: CO2EII_SUMMARY_RESULTS.csv  benchmark_region.ipynb  dev_compare.ipynb  ex_1_nem_benchmark.ipynb  example_1_total_emissions.ipynb  example_2_marginal.ipynb  faster_read.ipynb  manual_dev.py
examples/charts/: Daily_Total_Emissions_Data_compared_against_AEMO_reporting.html  Daily_Total_Energy_Data_compared_against_AEMO_reporting.html
src/nem_emissions/: __init__.py  development.py  nem_emissions.py  process.py
src/nemed/: __init__.py  defaults.py  downloader.py  nemed.py  process.py
src/nemed/data/: CO2EII_SUMMARY_RESULTS_FY1920.csv  CO2EII_SUMMARY_RESULTS_FY2122.csv  CO2EII_SUMMARY_RESULTS_RECENT.csv  duid_mapping.csv  existing_gen_data_summary.csv
src/nemed/helper_functions/: helpers.py  mod_nemosis.py  mod_xml_cache.py
src/your_package/: __init__.py
tests/: test_downloader.py
(+11 files in other folders)
